WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
91918
SVG-as-image (constrained) intrinsic size calculation is wrong in vertical writing modes
https://bugs.webkit.org/show_bug.cgi?id=91918
Summary
SVG-as-image (constrained) intrinsic size calculation is wrong in vertical wr...
mitz
Reported
2012-07-20 22:28:04 PDT
Created
attachment 153647
[details]
Test case See the attached test case, which is a transposed version of svg/as-image/svg-intrinsic-size-rectangular.html . The image element should end up 100px wide and 200px tall, but RenderSVGRoot::computeIntrinsicRatioInformation() returns a physical intrinsic size (and ratio) instead of a logical size, which is what the caller expects (and what raster images return, so they work as expected).
Attachments
Test case
(510 bytes, text/html)
2012-07-20 22:28 PDT
,
mitz
no flags
Details
Transpose the intrinsic size of the content renderer of a vertical replaced element to turn it from physical to logical
(4.09 KB, patch)
2012-07-21 12:33 PDT
,
mitz
mitz: review-
Details
Formatted Diff
Diff
Another test case
(438 bytes, text/html)
2012-07-21 13:52 PDT
,
mitz
no flags
Details
Transpose the intrinsic size of the content renderer of a vertical replaced element to turn it from physical to logical
(5.22 KB, patch)
2012-07-21 14:45 PDT
,
mitz
andersca
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2012-07-20 22:28:28 PDT
<
rdar://problem/11928576
>
mitz
Comment 2
2012-07-21 12:33:39 PDT
Created
attachment 153674
[details]
Transpose the intrinsic size of the content renderer of a vertical replaced element to turn it from physical to logical
mitz
Comment 3
2012-07-21 13:52:30 PDT
Created
attachment 153677
[details]
Another test case Turns out this is not enough. The attached test case is still broken after applying
attachment 153674
[details]
.
mitz
Comment 4
2012-07-21 14:45:32 PDT
Created
attachment 153678
[details]
Transpose the intrinsic size of the content renderer of a vertical replaced element to turn it from physical to logical Avoid clobbering m_intrinsicSize with a transposed value. Added a test for this, too.
mitz
Comment 5
2012-07-21 14:55:30 PDT
Fixed in
r123294
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug